--- a/assets/production/index.html
+++ b/assets/production/index.html
@@ -8,9 +8,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#e40a0a">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#14b8a6">
+    <meta name="msapplication-TileColor" content="#1e293b">
+    <meta name="theme-color" content="#1e293b">
     <link rel="preload" href="inter-normal.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="inter-medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="inter-semi-bold.woff2" as="font" type="font/woff2" crossorigin>
