Created fonts & icons folders.

--- a/assets/production/index.html
+++ b/assets/production/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
     <meta name="Description" content="Sodemann Industrifjedre A/S. Danmarks Største Udvalg Af Standardfjedre. Bl.a. Trykfjedre, Trækfjedre, Gasfjedre m.m. Hurtig 24 Timers Levering | Webshop ✓ ">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#14b8a6">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#e40a0a">
     <meta name="msapplication-TileColor" content="#1e293b">
     <meta name="theme-color" content="#1e293b">
-    <link rel="preload" href="inter-normal.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="inter-medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="inter-semi-bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/inter-normal.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/inter-medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/inter-semi-bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="manifest" href="fjedre.webmanifest">
     <title>Køb Fjedre Online | Til Private &amp; Erhverv | Stort Udvalg</title>
     <style>
@@ -21,19 +21,19 @@
       font-family: 'Inter';
       font-weight: 400;
       font-display: block;
-      src: url('inter-normal.woff2') format('woff2'), url('inter-normal.woff') format('woff');
+      src: url('fonts/inter-normal.woff2') format('woff2'), url('fonts/inter-normal.woff') format('woff');
       }
       @font-face {
       font-family: 'Inter';
       font-weight: 500;
       font-display: block;
-      src: url('inter-medium.woff2') format('woff2'), url('inter-medium.woff') format('woff');
+      src: url('fonts/inter-medium.woff2') format('woff2'), url('fonts/inter-medium.woff') format('woff');
       }
       @font-face {
       font-family: 'Inter';
       font-weight: 600;
       font-display: block;
-      src: url('inter-semi-bold.woff2') format('woff2'), url('inter-semi-bold.woff') format('woff');
+      src: url('fonts/inter-semi-bold.woff2') format('woff2'), url('fonts/inter-semi-bold.woff') format('woff');
       }
     </style>
     <script>var VERSION = "{{version}}";</script>
