--- a/assets/production/index.html
+++ b/assets/production/index.html
@@ -8,9 +8,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#e40a0a">
-    <meta name="msapplication-TileColor" content="#1e293b">
-    <meta name="theme-color" content="#1e293b">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#ba1c1c">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preload" href="fonts/inter-normal.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/inter-medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/inter-semi-bold.woff2" as="font" type="font/woff2" crossorigin>
